# dit-activity-stream

./: CHANGELOG.md  MANIFEST.in  README.md  dev-requirements.txt  makefile  manage.py  pyproject.toml  requirements.txt  setup.cfg  tox.ini
.github/workflows/: test.yml
dit_activity_stream/: client.py  urls.py  views.py
dit_activity_stream/test_app/: apps.py  client.py  factories.py  models.py  settings.py  urls.py  utils.py
dit_activity_stream/tests/: client.py  factories.py  settings.py  test_client.py  test_views.py
